webserver_sj/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: webserver
          image: hsj1024/rookies-final3-web:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: flask
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 5000
      targetPort: 5000
